fix(styles): better background placeholder on mobile

--- a/www/styles.css
+++ b/www/styles.css
@@ -22,11 +22,19 @@
 }
 
 @media (min-aspect-ratio: 7/8) {
+  .background {
+    background-position-x: 20%;
+  }
+
   .background video {
     transform: translateX(20%);
   }
 }
 @media (min-aspect-ratio: 4/3) {
+  .background {
+    background-position-x: 0%;
+  }
+
   .background video {
     transform: translateX(0%);
   }
